k8s/osc-board-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-front
  namespace: frontend
spec:
  selector:
    matchLabels:
      app: board-front
  template:
    metadata:
      labels:
        app: board-front
    spec:
      containers:
        - name: board-front
          image: mirrorkyh/osc-board-front-java:v1
          ports:
            - name: https
              containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: board-front-svc
  namespace: frontend
spec:
  type: NodePort
  selector:
    app: board-front
  ports:
    - protocol: TCP
      port: 9090 # 8080 해도 상관없다, 8080으로 바꿀 것.
      targetPort: https
