k8s/osc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osc-board-frontend-ingress
  namespace: frontend
spec:
  rules:
    - host: osc-board-frontend.com
      http:
        paths:
          - backend:
              service:
                name: board-front-svc
                namespace: frontend
                port:
                  number: 8080
            path: /
            pathType: Prefix
